# self-adpat-llm-mlx

./: .gitignore  README.md  main.py  pyproject.toml
src/: datasets_generator.py  transformer_svd.py
src/transformer_lm/: SVDLinear.py
wandb/: latest-run
wandb/run-20250131_215825-8nptz2ik/: run-8nptz2ik.wandb
wandb/run-20250131_215835-g51r1cbw/: run-g51r1cbw.wandb
wandb/run-20250131_215958-yh1oh57q/: run-yh1oh57q.wandb
wandb/run-20250131_231520-ck563d6g/: run-ck563d6g.wandb
wandb/run-20250131_231600-ykb4xs8q/: run-ykb4xs8q.wandb
wandb/run-20250131_231627-dvpaw5mq/: run-dvpaw5mq.wandb
wandb/run-20250131_232002-56165642/: run-56165642.wandb
wandb/run-20250131_232125-g84285u9/: run-g84285u9.wandb
wandb/run-20250131_232327-kmoq6ty3/: run-kmoq6ty3.wandb
wandb/run-20250131_232409-hxabplrm/: run-hxabplrm.wandb
wandb/run-20250131_233002-1hz1az29/: run-1hz1az29.wandb
wandb/run-20250131_233221-gr3r3cfd/: run-gr3r3cfd.wandb
wandb/run-20250131_233356-v6wsw0g1/: run-v6wsw0g1.wandb
wandb/run-20250131_233513-erui0uc0/: run-erui0uc0.wandb
wandb/run-20250131_233639-lcaf6nsg/: run-lcaf6nsg.wandb
wandb/run-20250131_234006-jjoz1cf7/: run-jjoz1cf7.wandb
wandb/run-20250131_234307-yoogywzx/: run-yoogywzx.wandb
wandb/run-20250131_234337-ywh67pk6/: run-ywh67pk6.wandb
wandb/run-20250131_234359-ue3jxky4/: run-ue3jxky4.wandb
wandb/run-20250131_234414-crzit31n/: run-crzit31n.wandb
wandb/run-20250131_234739-0rddvbsy/: run-0rddvbsy.wandb
wandb/run-20250131_234756-qw6zeaue/: run-qw6zeaue.wandb
wandb/run-20250131_234805-ddejmckp/: run-ddejmckp.wandb
(+84 files in other folders)
